--- a/StudentGradesManagement/StudentGradesManagement/StudentGradesManagement.csproj
+++ b/StudentGradesManagement/StudentGradesManagement/StudentGradesManagement.csproj
@@ -120,7 +120,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="database.sqlite">
+    <None Include="SQLite\Student.sqlite">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
